# cpp-skeleton

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_zh.md  config.h.in  lynx.service
3rd/include/cinatra/: coro_http_server.hpp
3rd/include/spdlog/: common.h  formatter.h  json_formatter.h  logger-inl.h  logger.h  spdlog.h  tweakme.h
3rd/include/spdlog/details/: executor-inl.h  executor.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h
3rd/include/spdlog/sinks/: sink.h
build-a/: Makefile
build-aarch64/: Makefile  config.h
build-arm/: Makefile
build-arm32/: Makefile
build-arm64/: Makefile
build-arm64/doc/: USAGE.md
build-arm64/etc/: config.json
cmake/toolchain/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
dep/.cmake/api/v1/reply/: cache-v2-8cd67cb44c69fb200ef8.json  cmakeFiles-v1-83053cdb4f521bb9e83b.json  codemodel-v2-5cd11a4ee26e31a72b61.json  index-2025-07-26T03-44-28-0717.json  target-cppdemo-01fb71b1a0196e96691f.json
dep/xxx/: Makefile
dep/xxx/.cmake/api/v1/reply/: target-app-7acbfe16ac646c94f79d.json
doc/: 3rd.md  CHANGELOG.md  cmake.md  config.md  daemon.md  env.md  google_cpp_style_guid.md  log.md  started.md  style.md
doc/lynx/: lynx.md
etc/: config.json  lynx.toml  lynx.toml.sav
examples/asio/fork/: daemon.cpp
examples/cinatra/: restapi.cpp
examples/ini/: demo  demo.cc  myfile.ini  run.sh
examples/json/: cbor_tag_handler_t.cpp
examples/ryml/: run.sh  ryml_demo  ryml_demo.cc  ryml_example.yml
examples/spdlog/: CMakeLists.txt
examples/spdlog/logs/: async_log.txt  events-sample.txt  multisink.txt  rotating.txt  somelog.txt
examples/toml/: CMakeLists.txt  Makefile  array_example  array_example.cpp  array_of_tables_example  array_of_tables_example.cpp  key_example  key_example.cpp  spec_example
scripts/: archive.sh  release.sh
src/app/: foo.c  main.c  main.cpp
src/cli/: main.cc
src/common/: apiserver.c  apiserver.h  cJSON.c  json_config.c  libae.c  libae.h  libanet.c  libconfig.h  libhashmap.c  libhashmap.h  libinet.c  libinet.h  liblinklist.c  liblinklist.h  libmem.c  libmem.h  libposix.c  libposix.h  libsock.h  libstr.c  libvector.h  libvty.c  libvty.h
src/cppdemo/: asio_demo1.cc  asio_demo2.cc  json_demo.cc  main.cc  main.h  spdlog_demo.cc  vector.cc
src/daemon/: README.md  config.c  config.cpp  config.hpp  daemon.hpp  job.hpp  log.cpp  log.hpp  main.cpp  repl.cpp  repl.hpp  rest_server.cpp  rest_server.hpp  terminal.hpp
src/lynx/: config.hpp  daemon.hpp  log.cpp  log.hpp  main.cpp  repl.cpp  repl.hpp  rest_server.cpp  rest_server.hpp
src/monster/: main.cpp  monster_generated.h  monsterdata.json
src/started/: main.cpp
src/t/: json-config.cpp  json-config.h  main.cpp
src/util/: ini_config.c  iniparser.c  libae.c  libanet.h  libbt.c  libbt.h  libconfig.c  libhashmap.c  libinet.c  liblinklist.c  liblog.c  liblog.h  libmem.h  libopt.c  libopt.h  libsock.c  libstr.h  libvector.c  libvty.c  libvty.h  linenoise.c
tools/cpplint/: cpplint.py
tools/systemd/: daemon.service  lynx.service.in
